line vertical div

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 			<div>Tel</div>
 			<div>Contact</div>
 		</div>
+		<div class="v_line"></div>
 		<div id="footer_bas">
 			<ul>
 				<li>
@@ -116,6 +117,7 @@
 				</li>
 			</ul>
 		</div>
+		<div class="v_line"></div>
 		<div id="reseaux_sociaux">
 			<div class="facebook"></div>
 			<div class="twitter"></div>
