--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<!-- __________________________________________________ -->
 
 		<div id="header">
-			<img src="./src/logo.jpg" alt="Logo">
+			<img src="./src/logo.jpg" alt="Logo" class="l_float">
 			<!-- Logo -->
-			<div id="navigation">
+			<div id="navigation" class="r_float">
 				<ul>
 					<li>
 						<a href="">Accueil</a>
@@ -31,6 +31,7 @@
 					</li>
 				</ul>
 			</div>
+			<div class="clearfix"></div>
 		</div>
 
 		<!-- _____________________________________________________ -->
