--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
 	<!-- _____________________________________________________ -->
 
 	<div id="footer">
-		<div id="footer_informations">
+		<div id="footer_informations" class="l_float">
 			<span>Adresse</span>
 			<br />
 			<span>Tel</span>
 			<br />
 			<span>Contact</span>
 		</div>
-		<div class="v_line"></div>
-		<div id="footer_bas">
+		<div class="v_line l_float"></div>
+		<div id="footer_bas" class="l_float">
 			<ul>
 				<li>
 					<a href="">CGV</a>
@@ -120,12 +120,13 @@
 				</li>
 			</ul>
 		</div>
-		<div class="v_line"></div>
-		<div id="reseaux_sociaux">
+		<div class="v_line l_float"></div>
+		<div id="reseaux_sociaux" class="l_float">
 			<div class="facebook"></div>
 			<div class="twitter"></div>
 			<div class="google"></div>
 		</div>
+		<div class="clearfix"></div>
 	</div>
 
 	<!-- Aside -->
