body > content > Align H article

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 		<div id="body">
 
-			<div id="article1">
+			<div id="article1" class="l_float">
 				<h1 class="titre">Oh, Hisse ! Chapiteau !</h1>
 				<p>
 					<span class="lettrine">E</span>
@@ -60,7 +60,7 @@
 				</div>
 			</div>
 
-			<div id="article2">
+			<div id="article2" class="r_float">
 				<div class="texte_article">
 					<h1>Titre de l'article</h1>
 					<p>
@@ -85,6 +85,7 @@
 				</div>
 
 			</div>
+			<div class="clearfix"></div>
 		</div>
 		<!--_____________________________________________________ -->
 
