body > articles > Ajout de lettrine

--- a/index.html
+++ b/index.html
@@ -44,14 +44,9 @@
 
 			<div id="article1" class="l_float">
 				<h1 class="titre">Oh, Hisse ! Chapiteau !</h1>
-				<p>
-					<span class="lettrine">E</span>
-					<span>
-						orem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi magnam aperiam perferendis voluptates error vitae earum dolorem dolor ex, reprehenderit odio eveniet, ipsa rem! Adipisci tempora facilis amet, architecto id.
-					</span>
-					<span>
+				<p class="lettrine">
+						Eorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi magnam aperiam perferendis voluptates error vitae earum dolorem dolor ex, reprehenderit odio eveniet, ipsa rem! Adipisci tempora facilis amet, architecto id.
 						Delectus distinctio molestiae nemo, enim et modi sed minima. Similique repudiandae, sunt explicabo sit ipsa suscipit consequatur nisi maiores nostrum atque reprehenderit quas ex assumenda placeat, saepe voluptatibus eum recusandae.
-					</span>
 				</p>
 				<div class="link_article">
 					<p>
@@ -63,10 +58,10 @@
 			<div id="article2" class="r_float">
 				<div class="texte_article">
 					<h1>Titre de l'article</h1>
-					<p>
-						<span class="lettrine">L</span>
+					<p class="lettrine">
+						
 						<span>
-							orem ipsum dolor sit amet, consectetur adipisicing elit. Itaque sapiente nisi pariatur amet tempora provident repudiandae enim unde nihil cumque nesciunt cupiditate, obcaecati quas ut maxime, quasi adipisci commodi dignissimos?
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque sapiente nisi pariatur amet tempora provident repudiandae enim unde nihil cumque nesciunt cupiditate, obcaecati quas ut maxime, quasi adipisci commodi dignissimos?
 						</span>
 						<span>
 							Nulla ullam nostrum consequatur mollitia exercitationem ipsam ex, quod quibusdam repellat voluptas laborum sint quisquam earum, velit dicta nisi autem facilis quam obcaecati! Labore recusandae, ipsam nihil totam quo minus?
