--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
 			<div id="article1" class="l_float">
 				<h1 class="titre">Oh, Hisse ! Chapiteau !</h1>
 				<p class="lettrine">
+					<span>
 						Eorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi magnam aperiam perferendis voluptates error vitae earum dolorem dolor ex, reprehenderit odio eveniet, ipsa rem! Adipisci tempora facilis amet, architecto id.
+					</span>
+					<span>
 						Delectus distinctio molestiae nemo, enim et modi sed minima. Similique repudiandae, sunt explicabo sit ipsa suscipit consequatur nisi maiores nostrum atque reprehenderit quas ex assumenda placeat, saepe voluptatibus eum recusandae.
+					</span>
 				</p>
 				<div class="link_article">
 					<p>
@@ -59,7 +63,7 @@
 				<div class="texte_article">
 					<h1>Titre de l'article</h1>
 					<p class="lettrine">
-						
+
 						<span>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque sapiente nisi pariatur amet tempora provident repudiandae enim unde nihil cumque nesciunt cupiditate, obcaecati quas ut maxime, quasi adipisci commodi dignissimos?
 						</span>
@@ -84,11 +88,11 @@
 		</div>
 		<!--_____________________________________________________ -->
 
-<!-- 		<div id="youtube" align="center">
-			 <iframe width="550" height="400" src="https://www.youtube.com/embed/C0GMVyng0Dc" frameborder="0" allowfullscreen></iframe>
-		
-			</div> -->
+		<!-- 		<div id="youtube" align="center">
+		<iframe width="550" height="400" src="https://www.youtube.com/embed/C0GMVyng0Dc" frameborder="0" allowfullscreen></iframe>
 
+	</div>
+	-->
 	<!-- _____________________________________________________ -->
 
 	<div id="footer">
@@ -128,10 +132,13 @@
 	<!-- Aside -->
 	<div id="aside">
 		<h1>Prochain Spectacle</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum sint velit vero, temporibus, ut libero autem expedita eum perferendis, quisquam odio, ex. Vel odit obcaecati ipsum, fuga nemo perspiciatis sunt.</p>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum sint velit vero, temporibus, ut libero autem expedita eum perferendis, quisquam odio, ex. Vel odit obcaecati ipsum, fuga nemo perspiciatis sunt.
+		</p>
 		<p class="date_aside">Le Jeudi 5 Février</p>
-		<a href="#"><img src="./src/aside.jpg" alt="Affiche pour faire feu de tout bois"></a>
-		
+		<a href="#">
+			<img src="./src/aside.jpg" alt="Affiche pour faire feu de tout bois"></a>
+
 	</div>
 </div>
 </body>
