--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 		</div>
 		<!--_____________________________________________________ -->
 
-		<!-- 		<div id="youtube" align="center">
+		<!--  		<div id="youtube" align="center">
 		<iframe width="550" height="400" src="https://www.youtube.com/embed/C0GMVyng0Dc" frameborder="0" allowfullscreen></iframe>
 
-	</div>
-	-->
+	</div> -->
+	
 	<!-- _____________________________________________________ -->
 
 	<div id="footer">
