modif header > Categories : Hover

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div id="container">
 		<!-- __________________________________________________ -->
 		<div id="header" class="postfix">
-			<img src="./src/logo.jpg" alt="Logo" class="l_float">
+			<img id="logo" src="./src/logo.jpg" alt="Logo" class="l_float">
 			<!-- Logo -->
 			<div id="navigation" class="r_float">
 				<ul>
