navigation > position block

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div id="header" class="postfix">
 			<img id="logo" src="./src/logo.jpg" alt="Logo" class="l_float">
 			<!-- Logo -->
-			<div id="navigation" class="r_float">
+			<div id="navigation" class="l_float">
 				<ul>
 					<li>
 						<a href="">Accueil</a>
