--- a/index.html
+++ b/index.html
@@ -42,15 +42,12 @@
 		<div id="body">
 
 			<div id="article1" class="l_float">
-				<h1 class="titre">Oh, Hisse ! Chapiteau !</h1>
+				<h1 class="titre">Spectacle d'ouverture du Nouveau Théâtre</h1>
 				<p class="lettrine">
-					<span>
-						Eorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi magnam aperiam perferendis voluptates error vitae earum dolorem dolor ex, reprehenderit odio eveniet, ipsa rem! Adipisci tempora facilis amet, architecto id.
-					</span>
-					<span>
-						Delectus distinctio molestiae nemo, enim et modi sed minima. Similique repudiandae, sunt explicabo sit ipsa suscipit consequatur nisi maiores nostrum atque reprehenderit quas ex assumenda placeat, saepe voluptatibus eum recusandae.
-					</span>
+					Pour ce spectacle, le nouveau théâtre invite nombre de danseurs, comédiens, musiciens et circassiens pour évoquer les arts du spectacle vivant, dans leur diversité, croiser les époques, les registres, émouvoir, surprendre, s’émerveiller, rêver ensemble. Un événement unique et gratuit pour fêter l’ouverture du Grand Théâtre !
+Au théâtre, il ne faut pas se fier au vocabulaire, ainsi la servante n’est pas une soubrette, mais une lampe mobile de faible intensité qui reste allumée sur le plateau (la scène pour le spectateur), elle est le symbole de la bienveillance des dieux tutélaires du théâtre ; le brigadier ne porte pas moustache mais enveloppé de velours et clouté, ce bâton sert à frapper les 3 coups… D’ailleurs ces 3 coups sont 15… Le troisième coup (enfin, le quinzième) est frappé, le silence s’établit, le rideau s’entrouvre…
 				</p>
+				<p class="date_article">Le Mardi 20 Avril par Michel Loupe</p>
 				<div class="link_article">
 					<p>
 						<a class="lire_la_suite" href="" >Lire la suite</a>
@@ -60,20 +57,14 @@
 
 			<div id="article2" class="r_float">
 				<div class="texte_article">
-					<h1>Titre de l'article</h1>
+					<h1>Cirqu'en famille</h1>
 					<p class="lettrine">
 
-						<span>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque sapiente nisi pariatur amet tempora provident repudiandae enim unde nihil cumque nesciunt cupiditate, obcaecati quas ut maxime, quasi adipisci commodi dignissimos?
-						</span>
-						<span>
-							Nulla ullam nostrum consequatur mollitia exercitationem ipsam ex, quod quibusdam repellat voluptas laborum sint quisquam earum, velit dicta nisi autem facilis quam obcaecati! Labore recusandae, ipsam nihil totam quo minus?
-						</span>
-						<span>
-							Illo quidem excepturi quas voluptas pariatur qui possimus placeat sed numquam non cum libero adipisci voluptatibus, perferendis quisquam eveniet nulla facilis repellendus in iusto! In, odit perferendis enim recusandae ipsum.
-						</span>
+						Ateliers ludiques pour vivre en famille un moment de découverte et d'expression artistique autour du langage et du geste circassien. Jeux d'équilibre, jeux dans l'espace et manipulation d'objets que vous pourrez refaire à la maison !
+6-8 ans <br />
+Ateliers menés par Michèle d'Angelo, artiste circassienne, et Abel Chahbi, jongleur et manipulateur d'objets ou par Fiona Couster, intervenante cirque
 					</p>
-					<p class="date_article">Mercredi 10 Février à 10h65 par Michel Loupe</p>
+					<p class="date_article">Mardi 5 mars / 18h</p>
 				</div>
 
 				<div class="link_article">
@@ -90,8 +81,8 @@
 		<!--  		<div id="youtube" align="center">
 		<iframe width="550" height="400" src="https://www.youtube.com/embed/C0GMVyng0Dc" frameborder="0" allowfullscreen></iframe>
 
-	</div> -->
-
+	</div>
+	-->
 	<!-- _____________________________________________________ -->
 
 	<div id="footer">
